adding readme file

--- a/hex.html
+++ b/hex.html
@@ -28,7 +28,12 @@
         <button class="btn btn-hero" id="btn">click me</button>
       </div>
       <div>
-        <i class="fab fa-github"></i>
+        <a
+          href="https://github.com/Nwachukwu-Uzor/color-flipper"
+          target="blank"
+        >
+          <i class="fab fa-github"></i>
+        </a>
       </div>
     </main>
     <!-- javascript -->
