--- a/index.html
+++ b/index.html
@@ -26,8 +26,13 @@
         <h1>color flipper: <span class="simple-color">black</span></h1>
         <button class="btn btn-hero" id="btn">CLICK ME</button>
       </div>
-      <div>
-        <a href="http://"><i class="fab fa-github"></i></a>
+      <div class="github">
+        <a
+          href="https://github.com/Nwachukwu-Uzor/color-flipper"
+          target="blank"
+        >
+          <i class="fab fa-github"></i>
+        </a>
       </div>
     </main>
     <!-- javascript -->
