adding the live link to the readme file

--- a/hex.html
+++ b/hex.html
@@ -28,10 +28,7 @@
         <button class="btn btn-hero" id="btn">click me</button>
       </div>
       <div>
-        <a
-          href="https://github.com/Nwachukwu-Uzor/color-flipper"
-          target="blank"
-        >
+        <a href="https://github.com/Nwachukwu-Uzor/color-flipper">
           <i class="fab fa-github"></i>
         </a>
       </div>
