--- a/index.html
+++ b/index.html
@@ -27,10 +27,7 @@
         <button class="btn btn-hero" id="btn">CLICK ME</button>
       </div>
       <div class="github">
-        <a
-          href="https://github.com/Nwachukwu-Uzor/color-flipper"
-          target="blank"
-        >
+        <a href="https://github.com/Nwachukwu-Uzor/color-flipper">
           <i class="fab fa-github"></i>
         </a>
       </div>
