--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </nav>
     <main>
       <div class="container">
-        <h1>color flipper: <span class="simple-color">black</span></h1>
+        <h2>Background color: <span class="simple-color"></span></h2>
         <button class="btn btn-hero" id="btn">CLICK ME</button>
       </div>
       <div class="github">
